add documentation swagger for update
