# docs/swagger.yaml
@@ -21,6 +21,21 @@ definitions:
       message:
         type: string
     type: object
+  handler.UpdateOpeningRequest:
+    properties:
+      company:
+        type: string
+      link:
+        type: string
+      location:
+        type: string
+      remote:
+        type: boolean
+      role:
+        type: string
+      salary:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
@@ -48,7 +63,7 @@ paths:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: Delete opening
       tags:
-      - Opening
+      - Openings
     get:
       consumes:
       - application/json
@@ -72,7 +87,7 @@ paths:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: Show opening
       tags:
-      - Opening
+      - Openings
     post:
       consumes:
       - application/json
@@ -97,7 +112,37 @@ paths:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: Create opening
       tags:
-      - Opening
+      - Openings
+    put:
+      consumes:
+      - application/json
+      description: Show a job opening
+      parameters:
+      - description: Opening identification
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: Opening data to Update
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.UpdateOpeningRequest'
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Show opening
+      tags:
+      - Openings
   /tests:
     get:
       consumes:
@@ -116,5 +161,5 @@ paths:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: List opening
       tags:
-      - Opening
+      - Openings
 swagger: "2.0"
